--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         
         <nav>
-            <div class="logo">Вище за хмари</div>
+            <div class="logo"><a class="header-logo-a" href="index.html">Вище за хмари</a></div>
             <label class="burger-icon">☰</label>
             <div id="menu">
                 <a class="a-menu" href="#around-us">Відпочинок</a>
@@ -45,7 +45,7 @@
                 <article class="card media padding">
                     <img class="card-img" src="img/view.jpg" alt="view">
                     <h3>Наші краєвиди</h3>
-                    <p>Незаймана природа</p>
+                    <p>кришталево чисте повітря на висоті 900м від рівня моря</p>
                 </article>
                 <article class="card media padding">
                     <img class="card-img" src="img/house.jpg" alt="winter-house">
@@ -96,7 +96,7 @@
                     </p>
 
 
-                    <a href="">Більше відгуків</a>
+                    <a href="https://www.booking.com/hotel/ua/vyshche-za-hmary.uk.html" target="blank">Більше відгуків</a>
                 </div>
             </article>
         </div>
@@ -107,7 +107,7 @@
 
                     <div class="slider-body">
                         <div class="curr-img-block">
-                            <img src="img/" class="curr-img" alt="Images">
+                            <img src="img/view.jpg" class="curr-img" alt="Images">
                         </div>
                         <div class="buttons">
                             <button class="prev">&#10094</button>
