--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
+    <link rel="icon" href="img/favicon (2).ico" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&amp;display=swap" rel="stylesheet">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css"
@@ -70,7 +71,7 @@
                 <h2 class="font-h2">Відчуйте себе як вдома</h2>
                 <p class="subtitle">Про нас пишуть в інтернеті:</p>
             </div>
-            <article class="response">
+            <div class="response">
                 <div class="card media-response height">
                     <img class="response-img" src="img/user.jpg" alt="user-image">
                 </div>
@@ -98,7 +99,7 @@
 
                     <a href="https://www.booking.com/hotel/ua/vyshche-za-hmary.uk.html" target="blank">Більше відгуків</a>
                 </div>
-            </article>
+            </div>
         </div>
             <div class="slider">
                 <div class="slider-header">
@@ -110,8 +111,8 @@
                             <img src="img/view.jpg" class="curr-img" alt="Images">
                         </div>
                         <div class="buttons">
-                            <button class="prev">&#10094</button>
-                            <button class="next">&#10095</button>
+                            <button class="prev">&#10094;</button>
+                            <button class="next">&#10095;</button>
                         </div>
                     </div>
                 </div>
